css/style.css
/* ... */
.nav-subtitle {
   font-size: 1.5em;
   text-align: center;
   font-weight: 300;
   margin-top: -10px;
   color: var(--dark-grey);
   font-size: 24pt;
}

.hamburger {
   display: none;
}

.image-content {
   display: flex;
   flex-direction: column;
   align-items: center;
}

.art-collection {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
}

ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
   list-style-type: none;
}

li {
   padding: 1rem 1rem;
}

a {
   font-size: 1.1em;
   text-decoration: none;
}

.pageTitle {
   text-align: center;
}

.art-collection {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 40px;
}

.art-items {
   text-align: center;
   background-color: #f9f9f9;
   position: relative;
}

.art-items p {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
}

.art-items > img {
height: 360px;
}

.screenLoad {
   z-index: 1;
   display: none;
   position: fixed;
   z-index: 1;
   padding-top: 100px;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.651);
}

.boxLoad {
   position: relative;
   background-color: #fefefe;
   margin: 0 auto;
   margin-top: -4vw;
   padding: 0 10px;
   width: 90%;
   max-width: 1200px;
}

.artLightbox{

   max-height: 90vh;
   max-width: 80vw;
   position: absolute;
}

.closeBtn{
   position: absolute;
   font-size: 20px;
   font-weight: bold;
   background: #fcfcfc;
   padding: 8px 20px 8px 20px;
   margin: 10px 10px;
   border: none;
   color: #999;
}

.closeBtn:hover,
.closeBtn:focus {
   background: #f0f0f0;
  text-decoration: none;
  cursor: pointer;
}
.screenLoad .lds-roller {
   position: absolute;
}

.buttons{
   display: flex;
background-color: #00000076;
flex-direction: column;
align-items: flex-start;
width: 100%;
   position: absolute;
   bottom: -60px;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
}

.isCover{
   background: #9c9c9c;
   padding: 8px 20px 8px 20px;
   margin: 10px 10px;
   border: none;
   color: #fff;
   font-size: 15px;
   width: 80px;
}

.removeBtn {
   background: #c3402f;
   padding: 8px 20px 8px 20px;
   margin: 10px 10px;
   border: none;
   color: #fff;
   font-size: 15px;
   width: 120px;
}

.removeBtn:hover {
   background: #ad2a2a;
}

.favoriteBtn {
   background: #5086b5;
   padding: 8px 20px 8px 20px;
   margin: 0px 10px;
   border: none;
   color: #fff;
   font-size: 15px;
   width: 120px;
}

.favoriteBtn:hover {
   background: #45739c;
}

.coverBtn {
   background: #5086b5;
   padding: 8px 20px 8px 20px;
   margin: 10px 10px;
   border: none;
   color: #fff;
   font-size: 15px;
   width: 120px;
}

.coverBtn:hover {
   background: #45739c;
}

.gallery-collection {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
}

.gallery-items {
   text-align: center;
   background-color: #f9f9f9;
   position: relative;
}

.gallery-items h1 {
   font-size: 1.5em;
   text-align: center;
   font-weight: 300;
   margin-bottom: 0;
   color: var(--dark-grey);
   font-size: 35pt;
}

.gallery-items p {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
}

.gallery-items > img {
   height: 360px;
}

.gallery-image-content {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
}

.gallery-image {
   max-width: 20%;
   max-height: 100%;
   margin: 10px;
   object-fit: contain;
}

.aboutSection {
   background-color: #e7f1f8;
   height: fit-content;
   display: flex;
   justify-content: space-evenly;
   padding: 15px;
}

.aboutSection p {
   width: 60%;
}

.aboutSection img {
   border-radius: 50%;
   max-width: 40%;
   max-height: 350px;
   margin-top: auto;
   margin-bottom: auto;
   margin-left: 30px;
}

.textInfo > p {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
}
.textInfo {
   text-align: center;
}
.contactInfo {
   display: flex;

   justify-content: space-around;
}
.contactInfo div {
   margin: 0px 40px;
   justify-content: space-around;
   display: flex;
   align-items: center;
}
.contactInfo div p {
   margin: 20px 20px;
}

.contactInfo div img {
   max-height: 50%;
}

/* The message box is shown when the user clicks on the password field */
#message {
   display: none;
   color: #888;
   position: relative;
   padding: 5px;
}

#message p {
   padding: 0px 38px;
   font-size: 12px;
}

/* Add a green text color and a checkmark when the requirements are right */
.valid {
   color: green;
}

.valid:before {
   position: relative;
   left: -35px;
   content: '\2713';
}

/* Add a red text color and an "x" icon when the requirements are wrong */
.invalid {
   color: red;
}

.invalid:before {
   position: relative;
   left: -35px;
   content: '✖';
}

#footer {
   background-color: #f7f7f7;
   margin-top: 50px;
}
#footer #contacts {
   display: flex;
   text-align: center;
   justify-content: space-evenly;
}
#footer #contacts a {
   margin: 10px 0px;
}

#footer #contacts a h5{
   margin: 5px 0px;
}
#footer img {
   max-width: 30px;
}

#login fieldset {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
}

#loading {
   display: flex;
   padding-bottom: 40px;
   flex-direction: row;
   justify-content: space-around;
}

.lds-roller {
   z-index: -1;
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
}

.gallery-items .lds-roller {
   z-index: 0;
   display: block;
   margin: 0 auto;
   margin-top: -80px;
   width: 80px;
   height: 80px;
}

.gallerSection li {
   display: flex;
   flex-direction: column-reverse;
   text-align: center;
   align-items: center;
}

.gallerSection img {
   width: 178px;
   border-width: 1px;
   border-style: solid;
   border-color: #ddd;
   padding: 6px !important;
}

.lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   transform-origin: 40px 40px;
}
/* ... */

